--- a/lessons/01_introduction/cascaded_tanks.ipynb
+++ b/lessons/01_introduction/cascaded_tanks.ipynb
@@ -413,8 +413,12 @@
     "We would like to fit a ARX model with structure:\n",
     "$$\n",
     "M({\\theta}) : \n",
-    "\\hat y(k) = \\overbrace{\\begin{bmatrix}  y(k-1)& \\dots& y(k-n_a)& u(k)& \\dots & u(k-n_b)  \\end{bmatrix}}^{=\\phi^\\top(k)} {\\theta}\n",
+    "\\hat y(k) = \\overbrace{\\begin{bmatrix}  y(k-1)& \\dots& y(k-n_a)& u(k)& \\dots & u(k-n_b)  \\end{bmatrix}}^{=\\phi^\\top(k)} {\\theta}.\n",
     "$$\n",
+    "\n",
+    "Here, the vector $\\theta$ contains the $n_a + n_b + 1$ ARX model coefficients:\n",
+    "\n",
+    "$$ \\theta = \\begin{bmatrix}a_1 & a_1 & \\dots & a_{n_a} &  b_0 & b_1 & \\dots & b_{n_b}\\end{bmatrix}^\\top.$$\n",
     "\n",
     "The extension to a NARX structure where the regressor $\\phi(k)$ contains non-linear terms of $u(k), y(k)$ is trivial."
    ]
@@ -470,7 +474,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = max((na, nb))  # number of initial conditions to consider\n",
+    "n = max((na, nb))  # number of initial conditions\n",
     "\n",
     "N_train = np.shape(y_train)[0]  # number of samples\n",
     "phi_train = np.zeros((N_train - n, na + nb + 1))\n",
@@ -555,7 +559,7 @@
     "    np.matmul(phi_train.transpose(), y_train_ls),  # Phi_train^T * y\n",
     ")\n",
     "print(f\"Least-square estimate: \\n {theta_ls}\")\n",
-    "# theta_ls_ = np.linalg.lstsq(phi_train, y_train_ls, rcond=None)[0]# alternative way to compute the least-square estimate"
+    "# theta_ls_ = np.linalg.lstsq(phi_train, y_train_ls, rcond=None)[0]# alternative (better) way to compute the least-square estimate"
    ]
   },
   {
@@ -638,7 +642,7 @@
     }
    ],
    "source": [
-    "y_train_hat = np.matmul(phi_train, theta_ls)\n",
+    "y_train_hat = np.matmul(phi_train, theta_ls) # PHI @ theta\n",
     "mse_train, R2_train = regression_metrics(y_train_ls, y_train_hat)\n",
     "print(\"Training performance:\")\n",
     "print(f\"MSE: {mse_train:.4f}; R2: {R2_train:.4f}\")\n",
@@ -768,19 +772,19 @@
     "\n",
     "\n",
     "# Simulation error minimization as a differentiable loss function\n",
-    "def simulation_loss(theta, u_sim, na, nb, y):\n",
+    "def simulation_loss(theta, u, na, nb, y):\n",
     "\n",
     "    n = np.max((na, nb))\n",
-    "    seq_len = u_sim.shape[0]\n",
+    "    seq_len = u.shape[0]\n",
     "    y_sim = torch.zeros(seq_len, dtype=torch.float32)\n",
     "    y = torch.tensor(y, dtype=torch.float32)\n",
-    "    u_sim = torch.tensor(u_sim, dtype=torch.float32)\n",
+    "    u = torch.tensor(u, dtype=torch.float32)\n",
     "\n",
     "    for idx in range(n, seq_len):\n",
     "\n",
     "        # build the regressor with previous *simulated* outputs and inputs\n",
     "        y_lag = torch.flip(y_sim[idx - na : idx], dims=[0]) # \\hat y(k-1), ..., \\hat y(k-na) \n",
-    "        u_lag = torch.flip(u_sim[idx - nb : idx + 1], dims=[0]) # u(k), u(k-1), ..., u(k-nb)\n",
+    "        u_lag = torch.flip(u[idx - nb : idx + 1], dims=[0]) # u(k), u(k-1), ..., u(k-nb)\n",
     "        phi_sim = torch.cat((y_lag, u_lag))\n",
     "\n",
     "        y_sim[idx] = torch.matmul(phi_sim, theta)\n",
@@ -919,7 +923,7 @@
     "\n",
     "$$\n",
     "M({\\theta}) : \n",
-    "\\hat y(k) = F \\bigg (u(k), u(k-1), \\dots  u(k-n_b) \\bigg) {\\theta}\n",
+    "\\hat y(k) = F^\\top \\bigg (u(k), u(k-1), \\dots  u(k-n_b) \\bigg) {\\theta}\n",
     "$$\n",
     "\n",
     "- long memory ($n_b$ large)\n",
@@ -1080,8 +1084,6 @@
    "outputs": [],
    "source": [
     "# simulation performance\n",
-    "\n",
-    "\n",
     "def simulate_fir(theta, u_sim, nfir, y0=None):\n",
     "\n",
     "    N = u_sim.shape[0]\n",
