--- a/exercises/narx_rnn/narx_rnn.ipynb
+++ b/exercises/narx_rnn/narx_rnn.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "## Step 0: Data ingestion and normalization (done)\n",
     "\n",
-    "Train and test datasets are saved in the GitHub folder *Dataset\\F16*, both in a .mat and .csv  format.\n",
+    "Train and test datasets are saved in .csv  format.\n",
     "- **Train dataset**: F16Data_SineSw_Level3\n",
     "- **Test datasets**: F16Data_SineSw_Level4_Validation\n"
    ]
