--- a/exercises/narx_rnn/narx_rnn.ipynb
+++ b/exercises/narx_rnn/narx_rnn.ipynb
@@ -8,7 +8,7 @@
     "# NARX and Recurrent Neural Networks\n",
     "## Application to Ground Vibration Test of an F-16 aircraft. Description of the benchmark: https://www.nonlinearbenchmark.org/benchmarks/f-16-gvt\n",
     "\n",
-    "### Course on Deep Learning for System Identification\n",
+    "### EECI course on Deep Learning for System Identification\n",
     "### Authors: Dario Piga, Marco Forgione\n",
     "### Milano, July, 2025"
    ]
@@ -40,8 +40,8 @@
     "- **Estimate a nonlinear model** describing the relation between the inputs and the three outputs.\n",
     "- Since the two inputs are strongly correlated, you can use either both inputs in your model, or just one of them.\n",
     "- Create three independent models, one for each output. Alternatively, create one single model with 3 outputs.\n",
-    "- Use a **fully-connected feedforward Neural Network** taking in past measurements of the two inputs (up to time k) and  measurements of the output (up to time k-1), and returning an estimate of the output at time k. For a single output and two inputs, the structure is:\n",
-    "$$y(k) = F(\\overbrace{y(k-1), \\dots, y(k-n_a), u_1(k), \\dots, u_1(k - n_b + 1), u_2(k), \\dots, u_2(k - n_b + 1)}^{=\\phi(k)};\\; W)$$\n",
+    "- Use a **Feed Forward Neural Network** taking in past measurements of the two inputs (up to time k) and  measurements of the output (up to time k-1), and returning an estimate of the output at time k. For a single output and two inputs, the structure is:\n",
+    "$$y(k) = \\mathcal{F}(\\overbrace{y(k-1), \\dots, y(k-n_a), u_1(k), \\dots, u_1(k - n_b + 1), u_2(k), \\dots, u_2(k - n_b + 1)}^{=\\phi(k)};\\; W)$$\n",
     "- **Test your results** on the dataset not used for training. Check the performance of your model both on 1-step ahead prediction and simulation. You can use the following metrics to assess the performance of your model:\n",
     "\n",
     "\\begin{align*}\n",
