--- a/lessons/03_pytorch/pytorch_bare/pytorch_bare_slides.ipynb
+++ b/lessons/03_pytorch/pytorch_bare/pytorch_bare_slides.ipynb
@@ -350,7 +350,7 @@
     "## Operations: combining tensors\n",
     "\n",
     "\n",
-    "Tensor manipulation tools like ``concatenate`` and ``stack`` are also super useful."
+    "Tensor manipulation tools like ``cat`` and ``stack`` are also super useful."
    ]
   },
   {
@@ -422,7 +422,7 @@
     }
    ],
    "source": [
-    "torch.concatenate((A, I), axis=0)"
+    "torch.cat((A, I), axis=0) # concatenate along axis 0 (rows)"
    ]
   },
   {
@@ -448,7 +448,7 @@
     }
    ],
    "source": [
-    "torch.concatenate((A, I), axis=1)"
+    "torch.cat((A, I), axis=1) # concatenate along axis 1 (columns)"
    ]
   },
   {
@@ -1365,123 +1365,123 @@
        " viewBox=\"0.00 0.00 220.00 506.75\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 502.75)\">\n",
        "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-502.75 216,-502.75 216,4 -4,4\"/>\n",
-       "<!-- 5566562240 -->\n",
+       "<!-- 6152799888 -->\n",
        "<g id=\"node1\" class=\"node\">\n",
-       "<title>5566562240</title>\n",
+       "<title>6152799888</title>\n",
        "<polygon fill=\"#caff70\" stroke=\"black\" points=\"128,-32.75 74,-32.75 74,0 128,0 128,-32.75\"/>\n",
        "<text text-anchor=\"middle\" x=\"101\" y=\"-7.25\" font-family=\"monospace\" font-size=\"10.00\"> ()</text>\n",
        "</g>\n",
-       "<!-- 5564475440 -->\n",
+       "<!-- 6154462464 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>5564475440</title>\n",
+       "<title>6154462464</title>\n",
        "<polygon fill=\"lightgrey\" stroke=\"black\" points=\"148,-89.5 54,-89.5 54,-68.75 148,-68.75 148,-89.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"101\" y=\"-76\" font-family=\"monospace\" font-size=\"10.00\">MeanBackward0</text>\n",
        "</g>\n",
-       "<!-- 5564475440&#45;&gt;5566562240 -->\n",
+       "<!-- 6154462464&#45;&gt;6152799888 -->\n",
        "<g id=\"edge10\" class=\"edge\">\n",
-       "<title>5564475440&#45;&gt;5566562240</title>\n",
+       "<title>6154462464&#45;&gt;6152799888</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M101,-68.36C101,-61.89 101,-53.05 101,-44.55\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"104.5,-44.55 101,-34.55 97.5,-44.55 104.5,-44.55\"/>\n",
        "</g>\n",
-       "<!-- 5543186576 -->\n",
+       "<!-- 6149510128 -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>5543186576</title>\n",
+       "<title>6149510128</title>\n",
        "<polygon fill=\"lightgrey\" stroke=\"black\" points=\"145,-146.25 57,-146.25 57,-125.5 145,-125.5 145,-146.25\"/>\n",
        "<text text-anchor=\"middle\" x=\"101\" y=\"-132.75\" font-family=\"monospace\" font-size=\"10.00\">PowBackward0</text>\n",
        "</g>\n",
-       "<!-- 5543186576&#45;&gt;5564475440 -->\n",
+       "<!-- 6149510128&#45;&gt;6154462464 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>5543186576&#45;&gt;5564475440</title>\n",
+       "<title>6149510128&#45;&gt;6154462464</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M101,-125.09C101,-118.47 101,-109.47 101,-101.27\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"104.5,-101.34 101,-91.34 97.5,-101.34 104.5,-101.34\"/>\n",
        "</g>\n",
-       "<!-- 5566623040 -->\n",
+       "<!-- 6149732096 -->\n",
        "<g id=\"node4\" class=\"node\">\n",
-       "<title>5566623040</title>\n",
+       "<title>6149732096</title>\n",
        "<polygon fill=\"lightgrey\" stroke=\"black\" points=\"145,-203 57,-203 57,-182.25 145,-182.25 145,-203\"/>\n",
        "<text text-anchor=\"middle\" x=\"101\" y=\"-189.5\" font-family=\"monospace\" font-size=\"10.00\">SubBackward0</text>\n",
        "</g>\n",
-       "<!-- 5566623040&#45;&gt;5543186576 -->\n",
+       "<!-- 6149732096&#45;&gt;6149510128 -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>5566623040&#45;&gt;5543186576</title>\n",
+       "<title>6149732096&#45;&gt;6149510128</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M101,-181.84C101,-175.22 101,-166.22 101,-158.02\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"104.5,-158.09 101,-148.09 97.5,-158.09 104.5,-158.09\"/>\n",
        "</g>\n",
-       "<!-- 5543190512 -->\n",
+       "<!-- 6152571056 -->\n",
        "<g id=\"node5\" class=\"node\">\n",
-       "<title>5543190512</title>\n",
+       "<title>6152571056</title>\n",
        "<polygon fill=\"lightgrey\" stroke=\"black\" points=\"145,-259.75 57,-259.75 57,-239 145,-239 145,-259.75\"/>\n",
        "<text text-anchor=\"middle\" x=\"101\" y=\"-246.25\" font-family=\"monospace\" font-size=\"10.00\">AddBackward0</text>\n",
        "</g>\n",
-       "<!-- 5543190512&#45;&gt;5566623040 -->\n",
+       "<!-- 6152571056&#45;&gt;6149732096 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>5543190512&#45;&gt;5566623040</title>\n",
+       "<title>6152571056&#45;&gt;6149732096</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M101,-238.59C101,-231.97 101,-222.97 101,-214.77\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"104.5,-214.84 101,-204.84 97.5,-214.84 104.5,-214.84\"/>\n",
        "</g>\n",
-       "<!-- 5566623088 -->\n",
+       "<!-- 6148862208 -->\n",
        "<g id=\"node6\" class=\"node\">\n",
-       "<title>5566623088</title>\n",
+       "<title>6148862208</title>\n",
        "<polygon fill=\"lightgrey\" stroke=\"black\" points=\"88,-316.5 0,-316.5 0,-295.75 88,-295.75 88,-316.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"44\" y=\"-303\" font-family=\"monospace\" font-size=\"10.00\">MulBackward0</text>\n",
        "</g>\n",
-       "<!-- 5566623088&#45;&gt;5543190512 -->\n",
+       "<!-- 6148862208&#45;&gt;6152571056 -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
-       "<title>5566623088&#45;&gt;5543190512</title>\n",
+       "<title>6148862208&#45;&gt;6152571056</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M54.19,-295.34C62.13,-287.71 73.37,-276.92 82.84,-267.82\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"85.02,-270.58 89.81,-261.13 80.17,-265.53 85.02,-270.58\"/>\n",
        "</g>\n",
-       "<!-- 5566622800 -->\n",
+       "<!-- 6152573072 -->\n",
        "<g id=\"node7\" class=\"node\">\n",
-       "<title>5566622800</title>\n",
+       "<title>6152573072</title>\n",
        "<polygon fill=\"lightgrey\" stroke=\"black\" points=\"114,-373.25 8,-373.25 8,-352.5 114,-352.5 114,-373.25\"/>\n",
        "<text text-anchor=\"middle\" x=\"61\" y=\"-359.75\" font-family=\"monospace\" font-size=\"10.00\">SelectBackward0</text>\n",
        "</g>\n",
-       "<!-- 5566622800&#45;&gt;5566623088 -->\n",
+       "<!-- 6152573072&#45;&gt;6148862208 -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
-       "<title>5566622800&#45;&gt;5566623088</title>\n",
+       "<title>6152573072&#45;&gt;6148862208</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M57.96,-352.09C55.86,-345.31 52.98,-336.05 50.39,-327.69\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"53.77,-326.79 47.46,-318.27 47.08,-328.86 53.77,-326.79\"/>\n",
        "</g>\n",
-       "<!-- 5566623280 -->\n",
+       "<!-- 6149816032 -->\n",
        "<g id=\"node8\" class=\"node\">\n",
-       "<title>5566623280</title>\n",
+       "<title>6149816032</title>\n",
        "<polygon fill=\"lightgrey\" stroke=\"black\" points=\"151,-430 51,-430 51,-409.25 151,-409.25 151,-430\"/>\n",
        "<text text-anchor=\"middle\" x=\"101\" y=\"-416.5\" font-family=\"monospace\" font-size=\"10.00\">AccumulateGrad</text>\n",
        "</g>\n",
-       "<!-- 5566623280&#45;&gt;5566622800 -->\n",
+       "<!-- 6149816032&#45;&gt;6152573072 -->\n",
        "<g id=\"edge6\" class=\"edge\">\n",
-       "<title>5566623280&#45;&gt;5566622800</title>\n",
+       "<title>6149816032&#45;&gt;6152573072</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M93.85,-408.84C88.56,-401.6 81.19,-391.51 74.77,-382.72\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"77.71,-380.81 68.98,-374.8 72.06,-384.94 77.71,-380.81\"/>\n",
        "</g>\n",
-       "<!-- 5566623184 -->\n",
+       "<!-- 6152575616 -->\n",
        "<g id=\"node10\" class=\"node\">\n",
-       "<title>5566623184</title>\n",
+       "<title>6152575616</title>\n",
        "<polygon fill=\"lightgrey\" stroke=\"black\" points=\"212,-316.5 106,-316.5 106,-295.75 212,-295.75 212,-316.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"159\" y=\"-303\" font-family=\"monospace\" font-size=\"10.00\">SelectBackward0</text>\n",
        "</g>\n",
-       "<!-- 5566623280&#45;&gt;5566623184 -->\n",
+       "<!-- 6149816032&#45;&gt;6152575616 -->\n",
        "<g id=\"edge9\" class=\"edge\">\n",
-       "<title>5566623280&#45;&gt;5566623184</title>\n",
+       "<title>6149816032&#45;&gt;6152575616</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M105.95,-409.12C115.36,-391.02 136.03,-351.28 148.61,-327.1\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"151.69,-328.75 153.2,-318.27 145.48,-325.52 151.69,-328.75\"/>\n",
        "</g>\n",
-       "<!-- 5564576816 -->\n",
+       "<!-- 6152682816 -->\n",
        "<g id=\"node9\" class=\"node\">\n",
-       "<title>5564576816</title>\n",
+       "<title>6152682816</title>\n",
        "<polygon fill=\"lightblue\" stroke=\"black\" points=\"130,-498.75 72,-498.75 72,-466 130,-466 130,-498.75\"/>\n",
        "<text text-anchor=\"middle\" x=\"101\" y=\"-473.25\" font-family=\"monospace\" font-size=\"10.00\"> (2, 1)</text>\n",
        "</g>\n",
-       "<!-- 5564576816&#45;&gt;5566623280 -->\n",
+       "<!-- 6152682816&#45;&gt;6149816032 -->\n",
        "<g id=\"edge7\" class=\"edge\">\n",
-       "<title>5564576816&#45;&gt;5566623280</title>\n",
+       "<title>6152682816&#45;&gt;6149816032</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M101,-465.73C101,-458.35 101,-449.43 101,-441.49\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"104.5,-441.66 101,-431.66 97.5,-441.66 104.5,-441.66\"/>\n",
        "</g>\n",
-       "<!-- 5566623184&#45;&gt;5543190512 -->\n",
+       "<!-- 6152575616&#45;&gt;6152571056 -->\n",
        "<g id=\"edge8\" class=\"edge\">\n",
-       "<title>5566623184&#45;&gt;5543190512</title>\n",
+       "<title>6152575616&#45;&gt;6152571056</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M148.63,-295.34C140.55,-287.71 129.12,-276.92 119.48,-267.82\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"122.05,-265.44 112.38,-261.12 117.25,-270.53 122.05,-265.44\"/>\n",
        "</g>\n",
@@ -1489,7 +1489,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x14bcbec00>"
+       "<graphviz.graphs.Digraph at 0x16eb8e810>"
       ]
      },
      "execution_count": 41,
@@ -1537,7 +1537,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dc24",
    "language": "python",
    "name": "python3"
   },
