--- a/lessons/01_introduction/cascaded_tanks.ipynb
+++ b/lessons/01_introduction/cascaded_tanks.ipynb
@@ -410,7 +410,7 @@
    "source": [
     "\n",
     "\n",
-    "We would like to fit a ARX model with structure:\n",
+    "We would like to fit a linear *AutoRegressive eXogenous* (ARX) model with structure:\n",
     "$$\n",
     "M({\\theta}) : \n",
     "\\hat y(k) = \\overbrace{\\begin{bmatrix}  y(k-1)& \\dots& y(k-n_a)& u(k)& \\dots & u(k-n_b)  \\end{bmatrix}}^{=\\phi^\\top(k)} {\\theta}.\n",
@@ -445,13 +445,15 @@
     "We first need to build the regression matrix $\\Phi$ containing in each row the regressor vectors $\\phi(k)$:\n",
     "\n",
     "\\begin{equation*}\n",
+    "\\overbrace{\n",
     "\\begin{bmatrix}\n",
     "\\hat y(1) \\\\\n",
     "\\vdots \\\\\n",
     "\\hat y(k)\\\\\n",
     "\\vdots \\\\\n",
     "\\hat y(N)) \\\\\n",
-    "\\end{bmatrix} = \n",
+    "\\end{bmatrix}\n",
+    "}^{=\\hat Y}= \n",
     "\\overbrace{\n",
     "\\begin{bmatrix}\n",
     "y(0) & \\dots  & y(1-n_a) & u(1) & \\dots & u(1 - n_b)\\\\\n",
@@ -531,7 +533,7 @@
    "source": [
     "We obtain the least squares estimate by solving:\n",
     "\n",
-    "$$\\theta_{LS} = (\\Phi^\\top \\Phi)^{-1}\\Phi^\\top y $$"
+    "$$\\theta_{LS} = (\\Phi^\\top \\Phi)^{-1}\\Phi^\\top Y $$"
    ]
   },
   {
@@ -556,7 +558,7 @@
    "source": [
     "theta_ls = np.linalg.solve(\n",
     "    np.matmul(phi_train.transpose(), phi_train),  # Phi_train^T * Phi_train\n",
-    "    np.matmul(phi_train.transpose(), y_train_ls),  # Phi_train^T * y\n",
+    "    np.matmul(phi_train.transpose(), y_train_ls),  # Phi_train^T * Y\n",
     ")\n",
     "print(f\"Least-square estimate: \\n {theta_ls}\")\n",
     "# theta_ls_ = np.linalg.lstsq(phi_train, y_train_ls, rcond=None)[0]# alternative (better) way to compute the least-square estimate"
@@ -831,12 +833,48 @@
     }
    ],
    "source": [
-    "simulation_loss(theta, u_train, y_train, na, nb)"
+    "loss = simulation_loss(theta, u_train, y_train, na, nb)\n",
+    "loss"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "e9b3da92-e840-4e37-b3f5-08f59aac0a69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss.backward() # run automatic differentiation..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d694b926-c321-4da9-8475-7573e651d52a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[13.5427],\n",
+       "        [13.9282],\n",
+       "        [-4.5367],\n",
+       "        [-4.5816],\n",
+       "        [-4.6260]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta.grad # gradients wrt theta are computed!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "ebe8d0db-cf8a-498a-ae1a-d27739881916",
    "metadata": {},
    "outputs": [],
@@ -846,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "6f882b4f",
    "metadata": {},
    "outputs": [
@@ -909,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "e1d67f10",
    "metadata": {},
    "outputs": [
@@ -985,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "03db2db1",
    "metadata": {},
    "outputs": [
@@ -995,7 +1033,7 @@
        "((724, 301), (724, 1))"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "affbbceb",
    "metadata": {},
    "outputs": [
@@ -1056,7 +1094,7 @@
        "tensor(71.0319, grad_fn=<MeanBackward0>)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "678b8f40",
    "metadata": {},
    "outputs": [
@@ -1126,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "eda2d966",
    "metadata": {},
    "outputs": [],
@@ -1136,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "cb8f2b21",
    "metadata": {},
    "outputs": [],
@@ -1158,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "3b5eebdf",
    "metadata": {},
    "outputs": [
@@ -1219,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "06a3e932",
    "metadata": {},
    "outputs": [
@@ -1529,7 +1567,7 @@
        "        [ 1.5572,  0.5572]], grad_fn=<CatBackward0>)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1557,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "d31b840a",
    "metadata": {},
    "outputs": [
@@ -1700,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "ca6d0173",
    "metadata": {},
    "outputs": [
@@ -2018,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "80fb4a9e",
    "metadata": {},
    "outputs": [
@@ -2069,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "ce796a84",
    "metadata": {},
    "outputs": [
@@ -2139,7 +2177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "60c9b88e",
    "metadata": {},
    "outputs": [
@@ -2184,7 +2222,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "eeci",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
