pytorch bare fix

--- a/lessons/03_pytorch/pytorch_bare/pytorch_bare_slides.ipynb
+++ b/lessons/03_pytorch/pytorch_bare/pytorch_bare_slides.ipynb
@@ -1089,7 +1089,7 @@
    "source": [
     "It has the closed-form solution:\n",
     "$$ y = \\overbrace{\\begin{bmatrix}x_1 & 1\\\\ x_2 & 1 \\\\ \\dots\\\\ x_N & 1 \\end{bmatrix}}^{=\\Phi} \\theta, \\qquad \n",
-    "\\mathcal{L}(\\theta) = (y-\\Phi \\theta)^\\top (y-\\Phi \\theta)\\qquad \\nabla{\\mathcal{L}(\\theta)} = \\Phi^\\top(y - \\Phi \\theta) = 0\\qquad\n",
+    "\\mathcal{L}(\\theta) = (y-\\Phi \\theta)^\\top (y-\\Phi \\theta)\\;\\; \\Rightarrow\\;\\; \\nabla{\\mathcal{L}(\\theta)} = \\Phi^\\top(y - \\Phi \\theta) = 0\\;\\; \\Rightarrow\\;\\; \n",
     "\\hat \\theta = (\\Phi^\\top\\Phi)^{-1}\\Phi^\\top y $$"
    ]
   },
@@ -1099,7 +1099,7 @@
    "id": "c401d761",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -1123,7 +1123,11 @@
   {
    "cell_type": "markdown",
    "id": "1a737176",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "Closed-form solution known for few special problems (eg, linear in the parameters). For all the others, numerical optimization! "
    ]
@@ -1438,123 +1442,123 @@
        " viewBox=\"0.00 0.00 220.00 506.75\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 502.75)\">\n",
        "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-502.75 216,-502.75 216,4 -4,4\"/>\n",
-       "<!-- 13082454256 -->\n",
+       "<!-- 5247491264 -->\n",
        "<g id=\"node1\" class=\"node\">\n",
-       "<title>13082454256</title>\n",
+       "<title>5247491264</title>\n",
        "<polygon fill=\"#caff70\" stroke=\"black\" points=\"128,-32.75 74,-32.75 74,0 128,0 128,-32.75\"/>\n",
        "<text text-anchor=\"middle\" x=\"101\" y=\"-7.25\" font-family=\"monospace\" font-size=\"10.00\"> ()</text>\n",
        "</g>\n",
-       "<!-- 13082343984 -->\n",
+       "<!-- 5249170352 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>13082343984</title>\n",
+       "<title>5249170352</title>\n",
        "<polygon fill=\"lightgrey\" stroke=\"black\" points=\"148,-89.5 54,-89.5 54,-68.75 148,-68.75 148,-89.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"101\" y=\"-76\" font-family=\"monospace\" font-size=\"10.00\">MeanBackward0</text>\n",
        "</g>\n",
-       "<!-- 13082343984&#45;&gt;13082454256 -->\n",
+       "<!-- 5249170352&#45;&gt;5247491264 -->\n",
        "<g id=\"edge10\" class=\"edge\">\n",
-       "<title>13082343984&#45;&gt;13082454256</title>\n",
+       "<title>5249170352&#45;&gt;5247491264</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M101,-68.36C101,-61.89 101,-53.05 101,-44.55\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"104.5,-44.55 101,-34.55 97.5,-44.55 104.5,-44.55\"/>\n",
        "</g>\n",
-       "<!-- 6437011712 -->\n",
+       "<!-- 5249443072 -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>6437011712</title>\n",
+       "<title>5249443072</title>\n",
        "<polygon fill=\"lightgrey\" stroke=\"black\" points=\"145,-146.25 57,-146.25 57,-125.5 145,-125.5 145,-146.25\"/>\n",
        "<text text-anchor=\"middle\" x=\"101\" y=\"-132.75\" font-family=\"monospace\" font-size=\"10.00\">PowBackward0</text>\n",
        "</g>\n",
-       "<!-- 6437011712&#45;&gt;13082343984 -->\n",
+       "<!-- 5249443072&#45;&gt;5249170352 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>6437011712&#45;&gt;13082343984</title>\n",
+       "<title>5249443072&#45;&gt;5249170352</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M101,-125.09C101,-118.47 101,-109.47 101,-101.27\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"104.5,-101.34 101,-91.34 97.5,-101.34 104.5,-101.34\"/>\n",
        "</g>\n",
-       "<!-- 6440953808 -->\n",
+       "<!-- 5247118896 -->\n",
        "<g id=\"node4\" class=\"node\">\n",
-       "<title>6440953808</title>\n",
+       "<title>5247118896</title>\n",
        "<polygon fill=\"lightgrey\" stroke=\"black\" points=\"145,-203 57,-203 57,-182.25 145,-182.25 145,-203\"/>\n",
        "<text text-anchor=\"middle\" x=\"101\" y=\"-189.5\" font-family=\"monospace\" font-size=\"10.00\">SubBackward0</text>\n",
        "</g>\n",
-       "<!-- 6440953808&#45;&gt;6437011712 -->\n",
+       "<!-- 5247118896&#45;&gt;5249443072 -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>6440953808&#45;&gt;6437011712</title>\n",
+       "<title>5247118896&#45;&gt;5249443072</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M101,-181.84C101,-175.22 101,-166.22 101,-158.02\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"104.5,-158.09 101,-148.09 97.5,-158.09 104.5,-158.09\"/>\n",
        "</g>\n",
-       "<!-- 6441206304 -->\n",
+       "<!-- 5249597648 -->\n",
        "<g id=\"node5\" class=\"node\">\n",
-       "<title>6441206304</title>\n",
+       "<title>5249597648</title>\n",
        "<polygon fill=\"lightgrey\" stroke=\"black\" points=\"145,-259.75 57,-259.75 57,-239 145,-239 145,-259.75\"/>\n",
        "<text text-anchor=\"middle\" x=\"101\" y=\"-246.25\" font-family=\"monospace\" font-size=\"10.00\">AddBackward0</text>\n",
        "</g>\n",
-       "<!-- 6441206304&#45;&gt;6440953808 -->\n",
+       "<!-- 5249597648&#45;&gt;5247118896 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>6441206304&#45;&gt;6440953808</title>\n",
+       "<title>5249597648&#45;&gt;5247118896</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M101,-238.59C101,-231.97 101,-222.97 101,-214.77\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"104.5,-214.84 101,-204.84 97.5,-214.84 104.5,-214.84\"/>\n",
        "</g>\n",
-       "<!-- 13082466608 -->\n",
+       "<!-- 5249292544 -->\n",
        "<g id=\"node6\" class=\"node\">\n",
-       "<title>13082466608</title>\n",
+       "<title>5249292544</title>\n",
        "<polygon fill=\"lightgrey\" stroke=\"black\" points=\"88,-316.5 0,-316.5 0,-295.75 88,-295.75 88,-316.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"44\" y=\"-303\" font-family=\"monospace\" font-size=\"10.00\">MulBackward0</text>\n",
        "</g>\n",
-       "<!-- 13082466608&#45;&gt;6441206304 -->\n",
+       "<!-- 5249292544&#45;&gt;5249597648 -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
-       "<title>13082466608&#45;&gt;6441206304</title>\n",
+       "<title>5249292544&#45;&gt;5249597648</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M54.19,-295.34C62.13,-287.71 73.37,-276.92 82.84,-267.82\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"85.02,-270.58 89.81,-261.13 80.17,-265.53 85.02,-270.58\"/>\n",
        "</g>\n",
-       "<!-- 13082466992 -->\n",
+       "<!-- 5243494240 -->\n",
        "<g id=\"node7\" class=\"node\">\n",
-       "<title>13082466992</title>\n",
+       "<title>5243494240</title>\n",
        "<polygon fill=\"lightgrey\" stroke=\"black\" points=\"114,-373.25 8,-373.25 8,-352.5 114,-352.5 114,-373.25\"/>\n",
        "<text text-anchor=\"middle\" x=\"61\" y=\"-359.75\" font-family=\"monospace\" font-size=\"10.00\">SelectBackward0</text>\n",
        "</g>\n",
-       "<!-- 13082466992&#45;&gt;13082466608 -->\n",
+       "<!-- 5243494240&#45;&gt;5249292544 -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
-       "<title>13082466992&#45;&gt;13082466608</title>\n",
+       "<title>5243494240&#45;&gt;5249292544</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M57.96,-352.09C55.86,-345.31 52.98,-336.05 50.39,-327.69\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"53.77,-326.79 47.46,-318.27 47.08,-328.86 53.77,-326.79\"/>\n",
        "</g>\n",
-       "<!-- 13082467040 -->\n",
+       "<!-- 5249598032 -->\n",
        "<g id=\"node8\" class=\"node\">\n",
-       "<title>13082467040</title>\n",
+       "<title>5249598032</title>\n",
        "<polygon fill=\"lightgrey\" stroke=\"black\" points=\"151,-430 51,-430 51,-409.25 151,-409.25 151,-430\"/>\n",
        "<text text-anchor=\"middle\" x=\"101\" y=\"-416.5\" font-family=\"monospace\" font-size=\"10.00\">AccumulateGrad</text>\n",
        "</g>\n",
-       "<!-- 13082467040&#45;&gt;13082466992 -->\n",
+       "<!-- 5249598032&#45;&gt;5243494240 -->\n",
        "<g id=\"edge6\" class=\"edge\">\n",
-       "<title>13082467040&#45;&gt;13082466992</title>\n",
+       "<title>5249598032&#45;&gt;5243494240</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M93.85,-408.84C88.56,-401.6 81.19,-391.51 74.77,-382.72\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"77.71,-380.81 68.98,-374.8 72.06,-384.94 77.71,-380.81\"/>\n",
        "</g>\n",
-       "<!-- 13082466464 -->\n",
+       "<!-- 5249598176 -->\n",
        "<g id=\"node10\" class=\"node\">\n",
-       "<title>13082466464</title>\n",
+       "<title>5249598176</title>\n",
        "<polygon fill=\"lightgrey\" stroke=\"black\" points=\"212,-316.5 106,-316.5 106,-295.75 212,-295.75 212,-316.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"159\" y=\"-303\" font-family=\"monospace\" font-size=\"10.00\">SelectBackward0</text>\n",
        "</g>\n",
-       "<!-- 13082467040&#45;&gt;13082466464 -->\n",
+       "<!-- 5249598032&#45;&gt;5249598176 -->\n",
        "<g id=\"edge9\" class=\"edge\">\n",
-       "<title>13082467040&#45;&gt;13082466464</title>\n",
+       "<title>5249598032&#45;&gt;5249598176</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M105.95,-409.12C115.36,-391.02 136.03,-351.28 148.61,-327.1\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"151.69,-328.75 153.2,-318.27 145.48,-325.52 151.69,-328.75\"/>\n",
        "</g>\n",
-       "<!-- 6437068928 -->\n",
+       "<!-- 5243708560 -->\n",
        "<g id=\"node9\" class=\"node\">\n",
-       "<title>6437068928</title>\n",
+       "<title>5243708560</title>\n",
        "<polygon fill=\"lightblue\" stroke=\"black\" points=\"130,-498.75 72,-498.75 72,-466 130,-466 130,-498.75\"/>\n",
        "<text text-anchor=\"middle\" x=\"101\" y=\"-473.25\" font-family=\"monospace\" font-size=\"10.00\"> (2, 1)</text>\n",
        "</g>\n",
-       "<!-- 6437068928&#45;&gt;13082467040 -->\n",
+       "<!-- 5243708560&#45;&gt;5249598032 -->\n",
        "<g id=\"edge7\" class=\"edge\">\n",
-       "<title>6437068928&#45;&gt;13082467040</title>\n",
+       "<title>5243708560&#45;&gt;5249598032</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M101,-465.73C101,-458.35 101,-449.43 101,-441.49\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"104.5,-441.66 101,-431.66 97.5,-441.66 104.5,-441.66\"/>\n",
        "</g>\n",
-       "<!-- 13082466464&#45;&gt;6441206304 -->\n",
+       "<!-- 5249598176&#45;&gt;5249597648 -->\n",
        "<g id=\"edge8\" class=\"edge\">\n",
-       "<title>13082466464&#45;&gt;6441206304</title>\n",
+       "<title>5249598176&#45;&gt;5249597648</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M148.63,-295.34C140.55,-287.71 129.12,-276.92 119.48,-267.82\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"122.05,-265.44 112.38,-261.12 117.25,-270.53 122.05,-265.44\"/>\n",
        "</g>\n",
@@ -1562,7 +1566,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x17fa71f10>"
+       "<graphviz.graphs.Digraph at 0x138e68110>"
       ]
      },
      "execution_count": 44,
