--- a/lessons/05_dynonet/dynonet_sketch.ipynb
+++ b/lessons/05_dynonet/dynonet_sketch.ipynb
@@ -54,7 +54,7 @@
    ],
    "source": [
     "model = CustomDynonet()\n",
-    "batch_u = torch.randn(32, 1000, 1)\n",
+    "batch_u = torch.randn(32, 1000, 1) # batch_size, seq_len, in_channels\n",
     "batch_y = model(batch_u)\n",
     "batch_y.shape"
    ]
@@ -76,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
