--- a/lessons/01_introduction/cascaded_tanks.ipynb
+++ b/lessons/01_introduction/cascaded_tanks.ipynb
@@ -811,7 +811,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initialize the parameters to the lest-square solution\n",
+    "# initialize the parameters to the least-square solution\n",
     "theta = torch.tensor(theta_ls, dtype=torch.float32, requires_grad=True)  "
    ]
   },
@@ -1242,7 +1242,7 @@
    "id": "982a2aa2",
    "metadata": {},
    "source": [
-    "### FIR training without L1 regularization \n",
+    "### FIR training with L1 regularization \n",
     "\n",
     "Implementation in PyTorch with proximal gradient descent. We may use some specialized LASSO solver instead... "
    ]
@@ -2222,7 +2222,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "eeci",
    "language": "python",
    "name": "python3"
   },
