--- a/exercises/regression/synthetic_2d/synthetic_2d_solutions.ipynb
+++ b/exercises/regression/synthetic_2d/synthetic_2d_solutions.ipynb
@@ -33,7 +33,7 @@
     "We have a training and a test datasets with 500 samples each, uniformly sampled within the domain. Samples are corrupted with an additive Gaussian noise with standard deviation $\\sigma_e = 0.1$\n",
     "\n",
     "We reconstruct the function using a MLP characterized by\n",
-    "* 2 input channels and 1 input channel - not a choice, this is the structure of $f(x)$: \n",
+    "* 2 input channels and 1 output channel - not a choice, this is the structure of $f(x)$: \n",
     "* 2 hidden layers\n",
     "* 32 neurons in the first layer, 16 neurons in the second layer\n",
     "* $\\tanh$ activation function "
@@ -450,7 +450,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "eeci",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -464,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
