--- a/lessons/03_pytorch/pytorch_bare/pytorch_bare_slides.ipynb
+++ b/lessons/03_pytorch/pytorch_bare/pytorch_bare_slides.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "25264264",
    "metadata": {
     "slideshow": {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6e92896d",
    "metadata": {
     "slideshow": {
@@ -666,25 +666,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "f3a4a162",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1.5000, 3.0000],\n",
-       "        [3.5000, 5.0000],\n",
-       "        [5.5000, 7.0000]])"
+       "tensor([[1.5000, 2.5000],\n",
+       "        [4.0000, 5.0000],\n",
+       "        [7.0000, 8.0000]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = torch.tensor([[1.0, 2.0], [3.0, 4.0], [5.0, 6.0]]); b = torch.tensor([0.5, 1.0]); X + b"
+    "X = torch.tensor([[1.0, 2.0], [3.0, 4.0], [5.0, 6.0]]); b = torch.tensor([0.5, 1.0, 2.0]).unsqueeze(1); X + b"
    ]
   },
   {
@@ -1628,7 +1628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
