--- a/exercises/regression/synthetic_2d/synthetic_2d_exercise.ipynb
+++ b/exercises/regression/synthetic_2d/synthetic_2d_exercise.ipynb
@@ -34,7 +34,7 @@
     "We have a training and a test datasets with 500 samples each, uniformly sampled within the domain. Samples are corrupted with an additive Gaussian noise with standard deviation $\\sigma_e = 0.1$\n",
     "\n",
     "We reconstruct the function using a MLP characterized by\n",
-    "* 2 input channels and 1 output channel - not a choice, this is the structure of $f(x)$: \n",
+    "* 2 input channels and 1 input channel - not a choice, this is the structure of $f(x)$: \n",
     "* 2 hidden layers\n",
     "* 32 neurons in the first layer, 16 neurons in the second layer\n",
     "* $\\tanh$ activation function "
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "926f5058",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "1eca44d4",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
     "plt.plot(LOSS)\n",
     "plt.title('Training loss')\n",
     "plt.xlabel('Epoch')\n",
-    "plt.ylabel('Loss');"
+    "plt.ylabel('Loss')"
    ]
   },
   {
