--- a/lessons/04_state_space/state_space_sketch.ipynb
+++ b/lessons/04_state_space/state_space_sketch.ipynb
@@ -136,18 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "torch.Size([32, 1024, 2])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 1024, 2])\n",
+      "torch.Size([32, 1024, 1])\n"
+     ]
     }
    ],
    "source": [
@@ -156,7 +154,8 @@
     "batch_x0 = torch.zeros((B, n_x))\n",
     "batch_u = torch.randn((B, T, n_u)) # replace with actual training input\n",
     "batch_x_sim = simulator(batch_x0, batch_u) # B, T, n_x \n",
-    "batch_x_sim.shape"
+    "print(batch_x_sim.shape)\n",
+    "print(batch_u.shape)"
    ]
   },
   {
@@ -212,15 +211,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 1024, 1])\n",
+      "torch.Size([1, 1024, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "n_y = 1; n_x = 2; n_u = 1\n",
     "B = 1 # just one sequence\n",
     "T = 1024\n",
     "u = torch.randn((B, T, n_u)) # replace with actual training input\n",
-    "y = torch.randn((B, T, n_y)) # replace with actual training output"
+    "y = torch.randn((B, T, n_y)) # replace with actual training output\n",
+    "\n",
+    "print(u.shape)\n",
+    "print(y.shape)"
    ]
   },
   {
@@ -260,7 +271,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(1.0014, grad_fn=<MseLossBackward0>)"
+       "tensor(1.2750, grad_fn=<MseLossBackward0>)"
       ]
      },
      "execution_count": 13,
@@ -292,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
